# sdl-metal-cpp-example

./: CMakeLists.txt  main-SDL3.cpp
